--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "koa-router": "^7.4.0",
     "next": "^5.0.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-free-style": "^7.0.0"
   }
 }
