--- a/.babelrc
+++ b/.babelrc
@@ -21,5 +21,10 @@
         "root": ["./"]
       }
     ]
-  ]
+  ],
+  "env": {
+    "test": {
+      "presets": [["next/babel", { "preset-env": { "modules": "commonjs" } }]]
+    }
+  }
 }
