--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "backpack build && next build",
     "watch": "backpack dev",
-    "test": "ava",
+    "test": "NODE_ENV=test ava",
     "serve": "NODE_ENV=production node dist/main.js"
   },
   "repository": {
@@ -24,9 +24,12 @@
       "test/**/*.test.js"
     ],
     "source": [
+      "server.js",
+      "store.js",
       "src/**/*.js",
       "pages/**/*.js",
       "hoc/**/*.js",
+      "utils/**/*.js",
       "components/**/*.js",
       "reducers/**/*.js"
     ],
@@ -57,6 +60,7 @@
     "ava": "^0.25.0",
     "backpack-core": "^0.5.0",
     "redux-thunk": "^2.2.0",
-    "standard": "^11.0.0"
+    "standard": "^11.0.0",
+    "supertest": "^3.0.0"
   }
 }
